--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
+								<h1>Rignition</h1>
 								<p>Automotive Photographer and Editor based in Semarang, Indonesia</p>
 							</div>
 						</div>
