--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							<ul>
 								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">Book and Pricing</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#about">Price</a></li>
+								<li><a href="#contact">Book</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
