--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 							<article id="intro">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Shidqi Arga Rukmana, pendiri Rignition adalah seorang fotografer di Semarang, Indonesia yang menekuni fotografi dan retouching otomotif. Shidqi adalah lulusan Fakultas Kedokteran Universitas Islam Sultan Agung yang mempunyai ketertarikan dalam dunia otomotif dan menangkap scene mobil di Indonesia melalui fotografi yang unik dan berkesan, dimana dibuatlah Rignition.</p>
 							</article>
 
 						<!-- Work -->
