--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="https://www.artstation.com/shidqiar">Work</a></li>
 								<li><a href="#about">Booking</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
