--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Shidqi Arga Rukmana, pendiri Rignition adalah seorang fotografer di Semarang, Indonesia yang menekuni fotografi dan retouching otomotif. Shidqi adalah lulusan Fakultas Kedokteran Universitas Islam Sultan Agung yang mempunyai ketertarikan dalam dunia otomotif dan menangkap scene mobil di Indonesia melalui fotografi yang unik dan berkesan, dimana dibuatlah Rignition.</p>
+								<p>Shidqi Arga Rukmana, pendiri Rignition adalah seorang fotografer di Semarang, Indonesia yang menekuni fotografi dan retouching otomotif. Shidqi adalah lulusan Fakultas Kedokteran Universitas Islam Sultan Agung yang mempunyai ketertarikan dalam dunia otomotif dan menangkap scene mobil di Indonesia melalui fotografi yang unik dan berkesan</p>
 							</article>
 
 						<!-- Work -->
