--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 							<article id="about">
 								<h2 class="major">Booking</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Rignition memberikan jasa sesi fotografi privat, grup, atau dokumentasi event disertai dengan editing/retouching foto.</p>
+								<p>Sesi privat			- (Max 1 mobil) - Mencakup foto "showcase" mobil dasar disertai foto konseptual - 2 sampai 3 jam - Editing dasar untuk semua foto dan editing konseptual 3 foto - Mulai dari 1250K</p>
+								<p>Sesi grup 			- (Max 5 mobil) - Mencakup foto konseptual (misal:adegan balap) dan showcase mobil - Waktu tidak terbatas, max. sesi 3 hari berbeda sesuai kebutuhan konsep yang diinginkan - Basic Editing semua foto dan 5 editing konseptual sesuai konsep - Mulai dari 2000k</p>
+								<p>Dokumentasi Event 	- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai kebutuhan acara - Basic editing untuk semua foto, editing konseptual opsional  - Mulai dari 750k/jam</p>
 							</article>
 
 						<!-- Contact -->
