--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 								<h2 class="major">Booking</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Rignition memberikan jasa sesi fotografi privat, grup, atau dokumentasi event disertai dengan editing/retouching foto.</p>
-								<p><b>Sesi privat</b>			- (Max 1 mobil) - Mencakup foto "showcase" mobil dasar disertai foto konseptual - 2 sampai 3 jam - Editing dasar untuk semua foto dan editing konseptual 3 foto - <i>Mulai dari 1250K</i></p>
-								<p><b>Sesi grup</b> 			- (Max 5 mobil) - Mencakup foto konseptual (misal:adegan balap) dan showcase mobil - Waktu tidak terbatas, max. sesi 2 hari berbeda sesuai kebutuhan konsep yang diinginkan - Basic Editing semua foto dan 5 editing konseptual sesuai konsep - <i>Mulai dari 2000k</i></p>
-								<p><b>Dokumentasi Event</b> 	- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai kebutuhan acara - Basic editing untuk semua foto, editing konseptual opsional  - <i>Mulai dari 750k/jam</i></p>
+								<p><u><b>Sesi privat</b></u>			- (Max 1 mobil) - Mencakup foto "showcase" mobil dasar disertai foto konseptual - 2 sampai 3 jam - Editing dasar untuk semua foto dan editing konseptual 3 foto - <i>Mulai dari 1250K</i></p>
+								<p><u><b>Sesi grup</b></u> 				- (Max 5 mobil) - Mencakup foto konseptual (misal:adegan balap) dan showcase mobil - Waktu tidak terbatas, max. sesi 2 hari berbeda sesuai kebutuhan konsep yang diinginkan - Basic Editing semua foto dan 5 editing konseptual sesuai konsep - <i>Mulai dari 2000k</i></p>
+								<p><u><b>Dokumentasi Event</b></u> 		- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai kebutuhan acara - Basic editing untuk semua foto, editing konseptual opsional  - <i>Mulai dari 750k/jam</i></p>
 							</article>
 
 						<!-- Contact -->
