--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 							<article id="about">
 								<h2 class="major">Booking</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Rignition memberikan jasa sesi fotografi privat, grup, atau dokumentasi event disertai dengan editing/retouching foto.</p>
-								<p><u><b>Sesi privat</b></u>			- (Max 1 mobil) - Mencakup foto "showcase" mobil dasar disertai foto konseptual - 2 sampai 3 jam - Editing dasar untuk semua foto dan editing konseptual 3 foto - <i>Mulai dari 1250K</i></p>
-								<p><u><b>Sesi grup</b></u> 				- (Max 5 mobil) - Mencakup foto konseptual (misal:adegan balap) dan showcase mobil - Waktu tidak terbatas, max. sesi 2 hari berbeda sesuai kebutuhan konsep yang diinginkan - Basic Editing semua foto dan 5 editing konseptual sesuai konsep - <i>Mulai dari 2000k</i></p>
-								<p><u><b>Dokumentasi Event</b></u> 		- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai kebutuhan acara - Basic editing untuk semua foto, editing konseptual opsional  - <i>Mulai dari 750k/jam</i></p>
+								<p>Rignition memberikan jasa sesi fotografi privat, grup, atau dokumentasi event disertai dengan editing/retouching foto. Foto disertai dengan sejumlah editing konseptual (Mis: Adegan balap, memindah lokasi, dll sesuai konsep yang diinginkan - Lihat bagian "Work" sebagai referensi)</p>
+								<p><u><b>Sesi privat (Siang)</b></u>			- (Max 1 mobil) - Max. 2 sampai 3 jam - Editing dasar semua foto, 3 foto edit konseptual - <i>Mulai dari 1250K</i></p>
+								<p><u><b>Sesi grup (Siang)</b></u> 				- (Max 5 mobil) - Max. sesi 3 hari sesuai kebutuhan konsep yang diinginkan - Editing dasar semua foto, 5 foto edit konseptual - <i>Mulai dari 2000k</i></p>
+								<p><u><b>Dokumentasi Event</b></u> 		- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai kebutuhan acara - Basic editing untuk semua foto, editing konseptual opsional - <i>Mulai dari 750k/jam</i></p>
+								<p><u><b>Untuk sesi malam hari silahkan bertanya</b></u></p>
+								<p>Untuk booking dapat mengajukan konsep, lokasi, dan waktu.</p>
 							</article>
 
 						<!-- Contact -->
