--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<p><u><b>Sesi grup (Siang)</b></u> 				- (Max 5 mobil) - Max. sesi 3 hari sesuai kebutuhan konsep yang diinginkan - Editing dasar semua foto, 5 foto edit konseptual - <i>Mulai dari 2000k</i></p>
 								<p><u><b>Dokumentasi Event</b></u> 		- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai kebutuhan acara - Basic editing untuk semua foto, editing konseptual opsional - <i>Mulai dari 750k/jam</i></p>
 								<p><u><b>Untuk sesi malam hari silahkan bertanya</b></u></p>
-								<p>Untuk booking dapat mengajukan konsep, lokasi, dan waktu.</p>
+								<p>Untuk booking dapat mengajukan konsep, waktu atau lokasi.</p>
 							</article>
 
 						<!-- Contact -->
