--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
 								<h2 class="major">Booking</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Rignition memberikan jasa sesi fotografi privat, grup, atau dokumentasi event disertai dengan editing/retouching foto. Foto disertai dengan sejumlah editing konseptual (Mis: Adegan balap, memindah lokasi, dll sesuai konsep yang diinginkan - Lihat bagian "Work" sebagai referensi).</p>
-								<p><u><b>Sesi privat (Siang)</b></u>			- (Max 1 mobil) - Max. 2 sampai 3 jam - 3 foto edit konseptual - <i>Mulai dari 1250K</i></p>
-								<p><u><b>Sesi grup (Siang)</b></u> 				- (Max 5 mobil) - Max. sesi 3 hari sesuai kebutuhan - 5 foto edit konseptual - <i>Mulai dari 2000k</i></p>
-								<p><u><b>Dokumentasi Event</b></u> 		- (Mobil tidak terbatas) - Mencakup foto dokumentasi event mobil - Waktu tidak terbatas sesuai acara - Basic editing untuk semua foto, editing konseptual opsional - <i>Mulai dari 750k/jam</i></p>
-								<p><u><b>Untuk sesi malam hari silahkan bertanya</b></u></p>
+								<p>Untuk sementara waktu daerah yang dapat dijangkau terutama di daerah Jawa Tengah</p>
 								<p>Untuk booking dapat mengajukan konsep, waktu atau lokasi.</p>
 							</article>
 
