--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<p><b>Line</b>: ShidqiAR</p>
 								<p><b>Email</b>: sargarukmana@gmail.com</p>
 								<ul class="icons">
-									<li><a href="https://www.instagram.com/rignition.media/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.instagram.com/rigni.tion/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
